containerized-sdks-try/istio-networking/external-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wavefront
spec:
  hosts:
  - tracing.wavefront.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wavefront
spec:
  hosts:
  - tracing.wavefront.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - tracing.wavefront.com
    route:
    - destination:
        host: tracing.wavefront.com
        port:
          number: 443
      weight: 100
