containerized-sdks-try/istio-networking/shopping-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopping-gateway-containerized-sample-app-ns
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shop
spec:
  hosts:
   - "*"
  gateways:
   - shopping-gateway
  http:
  - match:
    - uri:
        exact: /shop/menu
    - uri:
        exact: /shop/order
    route:
    - destination:
        host: shopping-service
        port:
          number: 80
